--- a/gb/20/1/15/n11795189.md
+++ b/gb/20/1/15/n11795189.md
@@ -1,15 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/zdqyi2905/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zdqyi2905/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zdqyi2905/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/myujtv3571/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/myujtv3571/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/myujtv3571/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/myujtv3571/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/myujtv3571/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/myujtv3571/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵大急流城落幕 主流：相信创世主会归来</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/2001142257231886-600x400.jpg" />
-<h6>2020年1月14日，神韵世界艺术团在美国密西根州第二大城市-急流城的狄维士演出厅进行了在该州的第一场演出。公司老板Elizabeth Eardley女士和John Demarest先生观看了演出。（林慧心／大纪元）
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/1701242236462153-600x400.jpg" />
+<h6>“神韵晚会”这台“世界第一秀”第13次莅临密西根州，拉开11场演出的序幕。2020年1月14日，神韵世界艺术团首场演出在密西根州第二大城市-大急流城（Grand Rapids）的狄维士演出厅（GRAND RAPIDS DeVos Performance Hall）登场。图为狄维士演出厅。（艾文／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年01月15日讯】（大纪元美国大急流城记者站报导）“世界第一秀”<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>演出第13次莅临密西根州，拉开11场演出的序幕。2020年1月14日，神韵世界艺术团首场演出在密西根州第二大城市-大急流城（Grand Rapids）的狄维士演出厅（GRAND RAPIDS DeVos Performance Hall）登场。</p>
+	<p>【大纪元2020年01月15日讯】（大纪元美国大急流城记者站报导）“世界第一秀”<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出第13次莅临密西根州，拉开11场演出的序幕。2020年1月14日，神韵世界艺术团首场演出在密西根州第二大城市-大急流城（Grand Rapids）的狄维士演出厅（GRAND RAPIDS DeVos Performance Hall）登场。</p>
 <p>大急流城是世界三大办公家具生产商的总部，有世界家具城的美誉。在这里举办的一年一度的ArtPrize艺术展是美国《时代》杂志评出的世界上五大节日之一。</p>
-<p>时隔三年，<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>再次来到大急流城，给观众带来了精湛美妙的艺术飨宴，也给人们心灵带来了震撼。演出中，人们感受到神佛无处不在。剧场内热烈的掌声表达了观众对神韵的热爱和赞美，更表达了他们对神韵艺术家的感激、对神的感恩。</p>
+<p>时隔三年，<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>再次来到大急流城，给观众带来了精湛美妙的艺术飨宴，也给人们心灵带来了震撼。演出中，人们感受到神佛无处不在。剧场内热烈的掌声表达了观众对神韵的热爱和赞美，更表达了他们对神韵艺术家的感激、对神的感恩。</p>
 <h2>企业主赞神韵演出美不胜收</h2>
+<figure id="attachment_11794598" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/2001142257231886.jpg"><img class="wp-image-11794598 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/2001142257231886-450x299.jpg" alt="" width="450" b="299" /></a><figcaption class="wp-caption-text">2020年1月14日，神韵世界艺术团在美国密西根州第二大城市-急流城的狄维士演出厅进行了在该州的第一场演出。公司老板Elizabeth Eardley女士和John Demarest先生观看了演出。（林慧心／大纪元）</figcaption></figure>
 <p>当地的公司老板Elizabeth Eardley女士和John Demarest先生观看了演出。Eardley赞美神韵演出“美丽而又与众不同”，Demarest则表示“演出很多方面都令人鼓舞”。</p>
 <p>Eardley赞叹神韵拥有“美丽的服装，美丽的舞蹈家！”谈到神韵交响乐团中西乐器合璧现场演奏的音乐，她表示“非常美丽，与众不同。”</p>
 <p>Demarest表示，“舞蹈结合音乐，艺术节目确实给了我一个机会反思，神韵的节目很多方面令人鼓舞，每个节目都有信息内涵和故事。”</p>
@@ -22,24 +23,24 @@
 <p>歌唱演员特有的美声唱法带给Verplank惊喜，“女高音令人惊奇，我从来没听过这样的歌唱，完全出乎我的意料。”</p>
 <p>神韵演出展现的传统文化使Verplank深受启发，“我觉得中国文化十分博大精深、启悟人心，中国以及中国人拥有那么久远的历史。”他表示会告诉朋友说，神韵是一个对中国历史和中国人的文化的“富有启迪的阐释”。</p>
 <h2>前CFO：神韵是看过的最吸引人的演出</h2>
-<figure id="attachment_11795460" style="width: 450px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2020/01/2001142257291886.jpg"><img class="wp-image-11795460" src="http://i.epochtimes.com/assets/uploads/2020/01/2001142257291886-600x400.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">前密西根大学医疗系统财务总监Jim England 和太太Barbara England等不及神韵在底特律上演，迫不及待的多驱车两个多小时来大急流城观看神韵。（万乐蕊／大纪元）</figcaption></figure>
+<figure id="attachment_11795460" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/2001142257291886.jpg"><img class="wp-image-11795460" src="https://i.epochtimes.com/assets/uploads/2020/01/2001142257291886-600x400.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">前密西根大学医疗系统财务总监Jim England 和太太Barbara England等不及神韵在底特律上演，迫不及待的多驱车两个多小时来大急流城观看神韵。（万乐蕊／大纪元）</figcaption></figure>
 <p>前密西根大学医疗系统财务总监（CFO）Jim England 和太太Barbara England等不及神韵在底特律上演，迫不及待的多驱车两个多小时来大急流城观看神韵。</p>
 <p>“这是我们看过的最吸引人的演出。”曾是花卉设计师的Barbara对神韵的色彩和舞蹈推崇备至。“演出精彩万分。我被深深的震撼。无法用语言描述。神韵的服饰色彩斑斓、华丽动人。舞蹈、演出出类拔萃。舞蹈演员动作的精准一致、整齐划一。这种同步性令我惊讶万分。天哪！他们简直太神奇了！”</p>
 <p>England夫妇表示观看神韵是他们给自己的圣诞礼物。Jim说，“神韵让你以各种不同的形式观赏到你从未见过的事物。所有的故事都非常好。作为一个喜欢运动的人，舞蹈演员的所有的翻腾的跳跃都令我印象深刻。”</p>
 <p>神韵独特的东西方乐器合并的交响乐团也令Jim赞不绝口：“我似乎与音乐融为一体。中国乐器和西方乐器相互交融。乐声融会贯通。”</p>
 <p>太太Barbara则喜欢神韵的动态天幕，“当舞蹈演员从舞台上跳出时，背景随之变动，你可以看到他在从悬崖上跌落。真是令人难以置信。太棒了！”Barbara说：“观看神韵是一场难忘的切身体验。”</p>
 <h2>制造业公司总裁感悟神传文化</h2>
-<div class="ng-star-inserted">Patrick Thompson先生和太太Kristen Thompson一同前来观看演出。Thompson夫妇对神韵展现的神传文化赞叹不已，并表示每个民族都应保留自己的传统。</div>
-<p>Thompson先生说：“我在中国待过很长时间，我对他们数千年的文化十分景仰，很美好，我认为所有的文化都是神传的（divinely inspired），包括我们的文化在内。”</p>
+<p>Patrick Thompson先生和太太Kristen Thompson一同前来观看演出。Thompson夫妇对神韵展现的神传文化赞叹不已，并表示每个民族都应保留自己的传统。<br />
+Thompson先生说：“我在中国待过很长时间，我对他们数千年的文化十分景仰，很美好，我认为所有的文化都是神传的（divinely inspired），包括我们的文化在内。”</p>
 <p>观看神韵，他感悟道：“每个国家都应找回自己最初的文化，为自己的传统自豪，这很重要。”</p>
-<h2>钢铁制造业老板：我们相信<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md">创世主</a>会归来</h2>
-<figure id="attachment_11794759" style="width: 450px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2020/01/2001142256291886.jpg"><img class="wp-image-11794759 size-medium" src="http://i.epochtimes.com/assets/uploads/2020/01/2001142256291886-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">Ken Genzink是当地Genzink Steel钢铁制造业公司的企业主，2020年1月14日晚，携夫人Jane，女儿Elisa和外孙女Alice祖孙三代一起观看了神韵世界艺术团在密西根州的首场演出。（朱莉娅／大纪元）</figcaption></figure>
+<h2>钢铁制造业老板：我们相信<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>会归来</h2>
+<figure id="attachment_11794759" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/2001142256291886.jpg"><img class="wp-image-11794759 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/2001142256291886-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">Ken Genzink是当地Genzink Steel钢铁制造业公司的企业主，2020年1月14日晚，携夫人Jane，女儿Elisa和外孙女Alice祖孙三代一起观看了神韵世界艺术团在密西根州的首场演出。（朱莉娅／大纪元）</figcaption></figure>
 <p>Ken Genzink是当地Genzink Steel钢铁制造业公司的企业主，1月14日晚，他携夫人Jane、女儿Elisa和外孙女Alice祖孙三代一起观看了演出。作为基督徒的一家人，神韵节目带来的神佛信息，也引起了他们的共鸣。</p>
-<p>Genzink先生表示：“我们相信有神圣的<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md">创世主</a>，神韵演出中展现了，展现得很美、很好。我们相信创世主会归来，把一起更新。”</p>
+<p>Genzink先生表示：“我们相信有神圣的<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>，神韵演出中展现了，展现得很美、很好。我们相信创世主会归来，把一起更新。”</p>
 <p>女儿Elisa也说：“是的，我认为节目是一个很好的提醒，告诉我们，创世主是神圣的，救度和治愈我们，总有一天我们会和他回到天堂。”</p>
 <h2>儿科医生：神韵在恢复传统文化 令人欣慰</h2>
-<figure id="attachment_11795418" style="width: 450px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2020/01/2001142256541886.jpg"><img class="wp-image-11795418 size-medium" src="http://i.epochtimes.com/assets/uploads/2020/01/2001142256541886-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年1月14日晚，儿科医生Doug Henry和太太Michelle LaFleur观看了大急流城的神韵演出。（新唐人电视台）</figcaption></figure>
-<p>儿科医生Doug Henry和太太Michelle LaFleur一起观看了神韵演出。演出让他们对中国的文化和历史有了新的认识。Henry说：“当我了解到<a href="https://github.com/zdqyi2905/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">中国传统文化</a>（被中共）破坏掉，真的是很痛心。但欣慰的是，神韵在恢复中国的传统文化。”</p>
+<figure id="attachment_11795418" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/2001142256541886.jpg"><img class="wp-image-11795418 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/01/2001142256541886-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年1月14日晚，儿科医生Doug Henry和太太Michelle LaFleur观看了大急流城的神韵演出。（新唐人电视台）</figcaption></figure>
+<p>儿科医生Doug Henry和太太Michelle LaFleur一起观看了神韵演出。演出让他们对中国的文化和历史有了新的认识。Henry说：“当我了解到<ahref="https://github.com/myujtv3571/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中国传统文化</a>（被中共）破坏掉，真的是很痛心。但欣慰的是，神韵在恢复中国的传统文化。”</p>
 <p>LaFleur女士是一位同时拥有律师和护士执照的专业人士，她被神韵节目里的精神内涵深深吸引，感到一种共鸣，“今晚我学到了很多。了解到了当今中国社会里中共对人民的迫害还在继续。我也很惊讶于中国历史里的信仰和我们西方的信仰有很多的共性。”</p>
 <h2>神韵展示的传统文化 华人分析师：震撼心灵</h2>
 <p>华人数据科学分析师陈先生看完神韵后赞叹道：“看了演出后，我觉得确实比较震撼，他们还原了比较多的原始的东西，比较传统的东西。”</p>
@@ -50,38 +51,44 @@
 	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/15/n11795189.htm">神韵大急流城落幕 主流：相信创世主会归来</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691076.htm">【内幕】中共间谍为何会盯上比利时</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/1/n11561317.htm">十一前夕 德国电视台深揭中共间谍活动</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/15/n11384998.htm">中共间谍利用台民主渗透 学者：立法补黑洞</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/25/n11213626.htm">夏小强：美国正在对中共间谍展开连环行动</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/5/n10830522.htm">中共间谍疑入侵德国支柱产业──汽车业</a></li>
-> <li><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/11/30/n11691076.md">【内幕】中共间谍为何会盯上比利时</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793300.htm">【新闻看点】中美初阶段贸协曝光 北京大让步</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793546.htm">港男纪律部队坠楼过程被录 评论：老天有眼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11781408.htm">【独家】专访郑文杰：被虐待致精神崩溃（三）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11790802.htm">中共外交部胡言乱语实录</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776359.htm">简化汉字“圣”包藏什么祸心？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11765864.htm">?美国四位总统的神异经历</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760836.htm">他将前世今生的爱 又带到了妻子的来世</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772982.htm">【才子佳人】不以貌取人 诸葛亮娶了位发明家</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791109.htm">内幕：美军如何第一时间确认炸死苏莱曼尼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791346.htm">中共高调“奔小康” 43斤女大学生因贫去世</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791008.htm">【新闻看点】川普邀200人见证签署 促习守承诺</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11793882.htm">【拍案惊奇】美击杀模式曝光 对伊战略适用中俄</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791008.htm">【新闻看点】川普邀200人见证签署 促习守承诺</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793352.htm">【热点互动】2020中国经济灰犀牛与黑天鹅</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788333.htm">杜汶泽请求蔡英文：救助流亡到台湾的香港人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791054.htm">大陆名嘴朱丹：口误让我的主持生涯彻底毁灭</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788080.htm">恭喜蔡英文 何韵诗讽林郑为“反共之母”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788570.htm">疑涉港警贪腐题材 郭富城梁朝伟新片未过审</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11791826.htm">网民：看了这段短片就知道伊朗“不可怕”</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/3/n11765388.md#1">神韵展示对神虔诚的信仰 蒙特利尔观众动容</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/3/n11766508.md#1">眼科医生三代观神韵 体验传统文化有共鸣</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/3/n11766644.md#1">辉煌壮观 高贵优雅 舞蹈演员：神韵是天国降临</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/3/n11766665.md#1">最质朴最纯粹的美 投资家赞神韵如钻石闪光</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/4/n11766759.md#1">感受传统文化 大学教授全家15口观神韵</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/1/4/n11766777.md#1">神传文化代代相传 新老移民带子女观神韵</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11795189.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">《天安门杀戮》挖到六四事件的根</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/26/n12711986.md#1">预言试析：共产党亡于何时？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/30/n12723183.md#1">【解密时分】懂得鸟语 历史上真有这样的人</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/20/12/29/n12651261.md#1">轮回转生 冤家变成母子</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/1/18/n12695507.md#1">【命理】被冤枉陷害的好人 皇天能不管吗？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12731260.md#1">【解密时分】24亿美元 史上十大最贵战机</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/4/n12731871.md#1">【拍案惊奇】CNN忽批贺锦丽 蓬佩奥再警示拜登</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728803.md#1">【时事军事】以色列警告美 放宽伊朗制裁即宣战</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727425.md#1">接受发型师义剪 流浪汉秒变绅士男震惊网友</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726784.md#1">【秦鹏直播】缅军方抓昂山素季 急坏拜登习近平？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728478.md#1">中共官媒群批“厕所革命”打了谁的脸？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/3/n12729203.md#1">黎姿携三个女儿行山 粉丝意外聚焦一双波鞋</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726330.md#1">51岁周传雄登陆综 22岁孟美岐当导师引狂批</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12726845.md#1">金马影后马思纯疑患抑郁症 停工半年后首发声</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12728875.md#1">获陈坤夸赞阳光又漂亮 杨颖默默点赞视频自励</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727150.md#1">立百病毒致死率高 专家示警下一场大流行威胁</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726617.md#1">这时喝水排毒快！早晚喝对水养生 还能控血糖</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727769.md#1">英军战机空袭伊拉克洞穴 准确歼灭IS成员</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/2/n12727507.md#1">2021年2月是个完美矩形 会有大事发生吗？</a></li>
+<li><a href="https://github.com/myujtv3571/djy/blob/master/gb/21/2/1/n12726294.md#1">中医师用2种水果干煮水喝 养胃、改善脂肪肝</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/myujtv3571/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/myujtv3571/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/15/n11795189.htm">神韵大急流城落幕 主流：相信创世主会归来</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/myujtv3571/djy/blob/master/gb/20/1/15/n11795189.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/myujtv3571/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/myujtv3571/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myujtv3571/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
